manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "aspnet6demoaks-b8d7"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "aspnet6demoaks-b8d7"
  template:
    metadata:
      labels:
        app: "aspnet6demoaks-b8d7"
    spec:
      containers:
        - name: "aspnet6demoaks-b8d7"
          image: "aspnet6democr2.azurecr.io/aspnet6demoaks"
          ports:
          - containerPort: 80
